@@ -9,7 +9,7 @@
 
 
 //---------------------------------------------------------------
-// ftok
+// Y_ftok
 //---------------------------------------------------------------
 long Y_ftok(char *path, int proj) {
    long key = svipc_ftok(path, proj);
@@ -141,7 +141,7 @@ void Y_shm_cleanup(long key) {
 }
 
 //--------------------------------------------------------------------
-// shm_var
+// Y_shm_var
 //--------------------------------------------------------------------
 
 void Y_shm_var(int nArgs)
@@ -207,7 +207,7 @@ void Y_shm_var(int nArgs)
 }
 
 //--------------------------------------------------------------------
-// shm_unvar
+// Y_shm_unvar
 //--------------------------------------------------------------------
 
 void Y_shm_unvar(int nArgs)
